sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
	
}
for( i <- 0 to getNombreValeurs()-2){
		var x=0
		for (j<-0 to i){
			if (getValeur(j+1)<getValeur(j)){
			echange(j+1,j) 
			x=1
			}
		}
		if (x==0){
			return
		}
	}

		for( i <- getNombreValeurs()-2 to 0 by -1){
		var x=0
		for (j<-0 to i){
			if (getValeur(j+1)<getValeur(j)){
			echange(j+1,j) 
			x=1
			}
		}
		if (x==0){
			return
		}
	}
		
}
